# log-scout-lsp-server

./: .dockerignore  .gitignore  BUILD_SUCCESS.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_COMPARISON.md  QUICK_START_TAGSCOUT.md  README.md  TAGSCOUT_IMPLEMENTATION.md  TAGSCOUT_INTEGRATION.md  build-and-deploy.bat  build-and-deploy.ps1  build-and-test.sh  deploy-to-server.sh  docker-compose.yml  increment-version.js  run-lsp-server.sh
.github/workflows/: docker.yml  release.yml  release.yml.bak
src/: config.rs  diagnostics.rs  document.rs  lib.rs  main.rs  pattern_engine.rs  server.rs
src/tagscout/: cache.rs  client.rs  client_temp.rs  converter.rs  mod.rs
