[package]
name = "log-scout-lsp-server"
version = "0.1.50"
edition = "2021"
authors = ["Log Scout Team"]
description = "Language Server Protocol server for log file analysis"
license = "MIT"

[[bin]]
name = "log-scout-lsp-server"
path = "src/main.rs"

[[bin]]
name = "test-tagscout"
path = "src/bin/test-tagscout.rs"

[dependencies]
# LSP protocol implementation
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Pattern matching
regex = "1"
lazy_static = "1.4"

# Concurrency
dashmap = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# MongoDB integration for TagScout
mongodb = { version = "2.8", features = ["tokio-runtime"] }
bson = "2.9"

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Directory utilities
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Cross-compilation targets
[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.x86_64-apple-darwin]
# macOS Intel

[target.aarch64-apple-darwin]
# macOS Apple Silicon

[target.x86_64-unknown-linux-gnu]
# Linux x64
